🪲 Fix: Dynamic VH, Closing mobile menu after linking, Fixing footer overflowing

--- a/src/components/header/MobileMenu.module.scss
+++ b/src/components/header/MobileMenu.module.scss
@@ -36,7 +36,7 @@
 
 .mobileMenuWrapper {
   width: 100vw;
-  height: calc(100vh - 70px);
+  height: calc(100dvh - 70px);
   visibility: hidden;
   opacity: 0;
   overflow: hidden;
